--- a/javascript.html
+++ b/javascript.html
@@ -15,9 +15,9 @@
     <p id="show2"></p>
 
     <script>
-      document.getElementById("show").innerHTML ="CharmingPY" ;
-      document.getElementById("show1").innerHTML =" 7 feet";
-      document.getElementById("show2").innerHTML = "Ghana";
+      document.getElementById("show").innerHTML ="Name: CharmingPY" ;
+      document.getElementById("show1").innerHTML ="Height: 7 feet";
+      document.getElementById("show2").innerHTML = "Conutry: Ghana";
     </script>
   </body>
 </html>
